objects/astClone2__Astrea_Clone_Rule_Fields__c.object
<CustomObject>
    <fields>
        <fullName>astClone2__Astrea_Clone_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Astrea Clone Rule</label>
        <referenceTo>astClone2__Astrea_Clone_Rules__c</referenceTo>
        <relationshipLabel>Astrea Clone Rule Fields</relationshipLabel>
        <relationshipName>Astrea_Clone_Rule_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>astClone2__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>astClone2__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Astrea Clone Rule Fields</label>
    <listViews>
        <fullName>astClone2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Astrea Clone Rule Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>